--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
     "body-parser": "^1.20.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "twilio": "^4.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
