--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,14 @@ DB_PASSWORD=your_secure_password
 
 # API Keys (for future integrations)
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Twilio Configuration
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_PHONE_NUMBER=+1234567890
+TWILIO_WEBHOOK_URL=https://your-domain.com/api/twilio/webhook
+
+# SendGrid Configuration
 SENDGRID_API_KEY=your_sendgrid_api_key
 
 # Security Keys
@@ -30,5 +36,5 @@ FRONTEND_URL=http://localhost:3000
 # Feature Flags
 ENABLE_REGISTRATION=true
 ENABLE_PAYMENTS=false
-ENABLE_SMS=false
+ENABLE_SMS=true
 ENABLE_EMAIL=false
