--- a/package.json
+++ b/package.json
@@ -17,13 +17,7 @@
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
     "body-parser": "^1.20.2",
-    "path": "^0.12.7",
-    "twilio": "^4.19.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6",
-    "express-validator": "^7.0.1",
-    "cookie-parser": "^1.4.6"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
