--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
     "body-parser": "^1.20.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
