Update .env.example with authentication-specific configuration and security settings

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
+# Honey Badger AI Gifts - Environment Configuration
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
 
-# Database Configuration (for future use)
+# JWT Authentication (REQUIRED)
+JWT_SECRET=your-super-secret-jwt-key-change-in-production-please
+
+# Database Configuration (for future use - currently using in-memory storage)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=honeybadger
@@ -12,18 +17,19 @@ DB_PASSWORD=your_secure_password
 # API Keys (for future integrations)
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Twilio Configuration
+# Twilio Configuration (Optional)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=+1234567890
 TWILIO_WEBHOOK_URL=https://your-domain.com/api/twilio/webhook
 
-# SendGrid Configuration
+# SendGrid Configuration (Optional)
 SENDGRID_API_KEY=your_sendgrid_api_key
 
 # Security Keys
-JWT_SECRET=your_super_secret_jwt_key_here
 SESSION_SECRET=your_session_secret_key_here
+BCRYPT_ROUNDS=12
+SESSION_TIMEOUT=7d
 
 # Payment Processing (for future use)
 STRIPE_SECRET_KEY=your_stripe_secret_key
@@ -36,5 +42,10 @@ FRONTEND_URL=http://localhost:3000
 # Feature Flags
 ENABLE_REGISTRATION=true
 ENABLE_PAYMENTS=false
-ENABLE_SMS=true
+ENABLE_SMS=false
 ENABLE_EMAIL=false
+
+# Authentication Settings
+REQUIRE_EMAIL_VERIFICATION=false
+PASSWORD_MIN_LENGTH=6
+TOKEN_EXPIRY=7d
